# witsml-consumer-api

./: .env.sample  .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
witsml_consumer_api/: config.py  connecter.py  main.py
witsml_consumer_api/crud/: __init__.py  base.py  capabilities.py  log.py  well.py  wellbore.py
witsml_consumer_api/routers/: capabilities.py  logs.py  wellbores.py  wells.py
witsml_consumer_api/schemas/: __init__.py  base.py  log.py  well.py  wellbore.py
witsml_consumer_api/utils/: utils.py
witsml_consumer_rest_api/: __init__.py  config.py  connecter.py  exeptions.py  main.py
witsml_consumer_rest_api/crud/: __init__.py  base.py  log.py  well.py  wellbore.py
witsml_consumer_rest_api/routers/: logs.py  wellbores.py  wells.py
witsml_consumer_rest_api/schemas/: __init__.py  base.py  log.py  well.py  wellbore.py
witsml_consumer_rest_api/utils/: utils.py
