[tool.poetry]
name = "witsml-consumer-api"
version = "0.1.0"
description = "This RESTFull API consumes data from a WITSML storage."
authors = ["hemersonrafael <rafaelpontes1995@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = {extras = ["all"], version = "^0.78.0"}
xmltodict = "0.12.0"
komle-plus = "^0.3.2"
ujson = "^5.4.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"
isort = "^5.10.1"
pip-audit = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
